# matchday-ops-copilot

./: .coverage  .dockerignore  .env.example  DECISIONS.md  DEMO.md  DEMO_SCRIPT.md  Dockerfile  LINKEDIN_POST.md  README.md  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json
app/: config.py  copilot.py  data.py  main.py  models.py  simulation.py
app/static/: index.html
deploy/: cloudrun.sh
sample_data/: incidents.csv  zones.csv
tests/: conftest.py  test_api.py  test_config.py  test_copilot.py  test_data.py  test_models.py  test_simulation.py
